# api_snippet_codes

./: .env.example  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: df2b9ccf48d0_initial_migration.py
src/: exceptions.py  main.py
src/api/: __init__.py
src/api/v1/: auth.py  snippet.py
src/core/: config.py  logger.py
src/db/: db.py
src/dependencies/: __init__.py  user_dependencies.py
src/models/: __init__.py  auth.py  base.py  role.py  snippet.py
src/schemas/: __init__.py  auth.py  snippets.py
src/services/: auth.py  snippet.py
tests/: test_db_auth.py  test_db_snippet.py  tests_routers_snippet.py
